--- a/src/OpenTelemetry.Exporter.Stackdriver/OpenTelemetry.Exporter.Stackdriver.csproj
+++ b/src/OpenTelemetry.Exporter.Stackdriver/OpenTelemetry.Exporter.Stackdriver.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Monitoring.V3" Version="1.1.0-beta02" />
     <PackageReference Include="Google.Cloud.Trace.V2" Version="1.0.0-beta02" />
-    <PackageReference Include="OpenTelemetry" Version="0.2.0-*" />
+    <PackageReference Include="OpenTelemetry" Version="0.2.0-alpha.333" />
   </ItemGroup>
 
 </Project>
