--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,5 @@ updates:
     # Check the nuget registry for updates every day (weekdays)
     schedule:
       interval: "daily"
-    allowed_updates:
-      - match:
-          dependency_name: "OpenTelemetry"
+    allow:
+      - dependency-name: "OpenTelemetry"
