--- a/src/OpenTelemetry.Instrumentation.Azure/OpenTelemetry.Instrumentation.Azure.csproj
+++ b/src/OpenTelemetry.Instrumentation.Azure/OpenTelemetry.Instrumentation.Azure.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry" Version="0.2.0-alpha.404" />
+    <PackageReference Include="OpenTelemetry" Version="0.4.0-beta.2" />
   </ItemGroup>
 
   <ItemGroup>
