--- a/.github/workflows/dotnet-core-cov.yml
+++ b/.github/workflows/dotnet-core-cov.yml
@@ -3,8 +3,12 @@ name: .NET Code Coverage
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+    - '**.md'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+    - '**.md'
 
 jobs:
   build-test-report:
