--- a/.github/workflows/dotnet-core-linux.yml
+++ b/.github/workflows/dotnet-core-linux.yml
@@ -1,10 +1,10 @@
 name: .NET Linux
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
+    paths-ignore:
+    - '**.md'
 
 jobs:
   build-test:
