--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -3,8 +3,14 @@ name: .NET
 on:
   push:
     branches: [ master ]
+    tags:
+    - '*'
+    paths-ignore:
+    - '**.md'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+    - '**.md'
 
 jobs:
   build-test-pack:
