--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -6,6 +6,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="OpenTelemetry" Version="0.5.0-beta.2" />
   </ItemGroup>
 
   <PropertyGroup>
