--- a/.github/workflows/dotnet-core-win.yml
+++ b/.github/workflows/dotnet-core-win.yml
@@ -12,12 +12,17 @@ jobs:
 
     strategy:
       matrix:
-        version: [net46,netcoreapp2.1,netcoreapp3.1]
+        version: [net461,netcoreapp2.1,netcoreapp3.1]
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup .NET Core
+    - name: Setup .NET Core 2.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 2.1.x
+
+    - name: Setup .NET Core 3.1
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.x
