--- a/.github/workflows/dotnet-core-cov.yml
+++ b/.github/workflows/dotnet-core-cov.yml
@@ -1,4 +1,4 @@
-name: .NET Code Coverage
+name: Code Coverage
 
 on:
   push:
@@ -31,7 +31,11 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: dotnet test
-      run: dotnet test --collect:"XPlat Code Coverage" --results-directory:"TestResults" --configuration Release --no-build -- RunConfiguration.DisableAppDomain=true
+      run: dotnet test --collect:"Code Coverage" --results-directory:"TestResults" --configuration Release --no-build -- RunConfiguration.DisableAppDomain=true
+
+    - name: Process code coverage
+      run: .\build\process-codecoverage.ps1
+      shell: powershell
 
     - name: Install report tool
       run: dotnet tool install -g dotnet-reportgenerator-globaltool
@@ -39,7 +43,7 @@ jobs:
     - name: Merging test results
       run: reportgenerator -reports:TestResults/**/*.xml -targetdir:TestResults -reporttypes:Cobertura
 
-    - uses: codecov/codecov-action@v1.0.10
+    - uses: codecov/codecov-action@v1.0.12
       with:
         file: TestResults/Cobertura.xml
         env_vars: OS
