--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -2,11 +2,11 @@
   <Import Project="..\Directory.Build.targets" Condition="Exists('..\Directory.Build.targets')" />
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="$(MicrosoftSourceLinkGitHubPkgVer)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="OpenTelemetry" Version="0.5.0-beta.2" />
+    <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryPkgVer)" />
   </ItemGroup>
 
   <PropertyGroup>
