upload to MyGet nightly (#28)
* upload to MyGet nightly

* publishing to myget

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: Pack
+name: Pack and upload to MyGet
 
 on:
   workflow_dispatch:
@@ -40,3 +40,8 @@ jobs:
       with:
         name: ${{ matrix.os }}-packages
         path: '**/bin/**/*.*nupkg'
+
+    - name: Publish MyGet
+      run: |
+        nuget setApiKey ${{ secrets.MYGET_TOKEN }} -Source https://www.myget.org/F/opentelemetry-contrib/api/v2/package
+        nuget push **/bin/**/*.nupkg -Source https://www.myget.org/F/opentelemetry-contrib/api/v2/package
