--- a/test/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Unit test project for OpenTelemetry .NET Remoting instrumentation</Description>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net452;net46</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
