--- a/test/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests/OpenTelemetry.Contrib.Instrumentation.Remoting.Tests.csproj
@@ -5,6 +5,10 @@
     <TargetFrameworks>net452</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup>
+     <RunSettingsFilePath>$(MSBuildProjectDirectory)\test.runsettings</RunSettingsFilePath>
+  </PropertyGroup>
+
   <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
       <PackageReference Include="Moq" Version="$(MoqPkgVer)" />
