--- a/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
+++ b/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="$(OpenTelemetryPkgVer)" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="$(OpenTelemetryPkgVer)" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNet" Version="$(OpenTelemetryPkgVer)" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="$(OpenTelemetryPkgVer)" />
   </ItemGroup>
