--- a/src/OpenTelemetry.Contrib.Exporter.Stackdriver/OpenTelemetry.Contrib.Exporter.Stackdriver.csproj
+++ b/src/OpenTelemetry.Contrib.Exporter.Stackdriver/OpenTelemetry.Contrib.Exporter.Stackdriver.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Monitoring.V3" Version="2.1.0" />
     <PackageReference Include="Google.Cloud.Trace.V2" Version="2.0.0" />
+    <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
   </ItemGroup>
 
 </Project>
