--- a/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
@@ -4,5 +4,7 @@
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
     <Description>OpenTelemetry extensions for AWS X-Ray.</Description>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
+  </ItemGroup>
 </Project>
