--- a/src/OpenTelemetry.Contrib.Instrumentation.Azure/OpenTelemetry.Contrib.Instrumentation.Azure.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Azure/OpenTelemetry.Contrib.Instrumentation.Azure.csproj
@@ -5,4 +5,7 @@
     <Description>OpenTelemetry instrumentation for Azure dependencies.</Description>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
+  </ItemGroup>
 </Project>
