separate minver prefixes

--- a/src/OpenTelemetry.Contrib.Exporter.Stackdriver/OpenTelemetry.Contrib.Exporter.Stackdriver.csproj
+++ b/src/OpenTelemetry.Contrib.Exporter.Stackdriver/OpenTelemetry.Contrib.Exporter.Stackdriver.csproj
@@ -10,5 +10,8 @@
     <PackageReference Include="Google.Cloud.Trace.V2" Version="2.0.0" />
     <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
   </ItemGroup>
-
+    
+  <PropertyGroup>
+    <MinVerTagPrefix>Exporter.Stackdriver-</MinVerTagPrefix>
+  </PropertyGroup>
 </Project>
