--- a/src/OpenTelemetry.Contrib.Instrumentation.Elasticsearch/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Elasticsearch/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
     <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
   </ItemGroup>
+    
+  <PropertyGroup>
+    <MinVerTagPrefix>Instrumentation.ElasticsearchClient-</MinVerTagPrefix>
+  </PropertyGroup>
 
 </Project>
