--- a/src/OpenTelemetry.Contrib.Instrumentation.MassTransit/OpenTelemetry.Contrib.Instrumentation.MassTransit.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.MassTransit/OpenTelemetry.Contrib.Instrumentation.MassTransit.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Description>OpenTelemetry instrumentation for MassTransit</Description>
     <PackageTags>$(PackageTags);distributed-tracing;MassTransit</PackageTags>
+    <MinVerTagPrefix>Instrumentation.MassTransit-</MinVerTagPrefix>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
   </ItemGroup>
-
 </Project>
