--- a/src/OpenTelemetry.Contrib.Instrumentation.Wcf/OpenTelemetry.Contrib.Instrumentation.Wcf.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Wcf/OpenTelemetry.Contrib.Instrumentation.Wcf.csproj
@@ -6,6 +6,10 @@
     <PackageTags>$(PackageTags);distributed-tracing;WCF</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="1.0.1" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
     <Reference Include="System.Configuration" />
     <Reference Include="System.ServiceModel" />
