Added client tests.

--- a/test/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests.csproj
@@ -21,6 +21,10 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' != 'net452'">
+    <PackageReference Include="System.ServiceModel.Http" Version="4.7.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc2" />
   </ItemGroup>
