Upgrading Elasticsearch to OTel version 1.0.2 (#83)
* Upgrading Elasticsearch to OTel version to 1.0.1

* Update OTel to make use of AddLegacyActivity

* Add shared project for instrumentation helper source

* Added an Elasticsearch sampler tests (currently fails)

* Got tests passing and add tests to show that sampling is working

* Move constants into ElasticsearchRequestPipelineDiagnosticListener class. Fix formatting issues.

* Adding Enrich option for Elasticsearch instrumentation

* Skip shared project test coverage

* Add tests to verify downstream suppression. Change DiagnosticSourceListener to use it's own RuntimeContextSlot.

* Update to latest OTel

Co-authored-by: Cijo Thomas <cithomas@microsoft.com>

--- a/src/OpenTelemetry.Contrib.Instrumentation.Elasticsearch/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Elasticsearch/OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient.csproj
@@ -4,9 +4,10 @@
     <Description>Elasticsearch instrumentation for OpenTelemetry .NET</Description>
     <PackageTags>$(PackageTags);distributed-tracing</PackageTags>
     <MinVerTagPrefix>Instrumentation.ElasticsearchClient-</MinVerTagPrefix>
+    <IncludeSharedInstrumentationSource>true</IncludeSharedInstrumentationSource>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="4.7.2" />
-    <PackageReference Include="OpenTelemetry" Version="0.7.0-beta.1" />
+    <PackageReference Include="OpenTelemetry" Version="1.0.2-alpha.0.29" />
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
