add otel sdk to unitest project

--- a/test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Instrumentation.AWSLambda\OpenTelemetry.Contrib.Instrumentation.AWSLambda.csproj" />
+    <PackageReference Include="OpenTelemetry" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
