--- a/test/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCoreTests/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCoreTests/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore\OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
