--- a/.github/workflows/package-Preview.yml
+++ b/.github/workflows/package-Preview.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.Contrib.Extensions
+name: Pack OpenTelemetry.Contrib.Preview
 
 on:
   workflow_dispatch:
@@ -9,13 +9,13 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'Extensions-*' # trigger when we create a tag with prefix "Extensions-"
+      - 'Preview-*' # trigger when we create a tag with prefix "Preview-"
 
 jobs:
   build-test-pack:
     runs-on: ${{ matrix.os }}
     env:
-      PROJECT: OpenTelemetry.Contrib.Extensions
+      PROJECT: OpenTelemetry.Contrib.Preview
 
     strategy:
       matrix:
@@ -44,7 +44,7 @@ jobs:
         name: ${{env.PROJECT}}-packages
         path: '**/${{env.PROJECT}}/bin/**/*.*nupkg'
 
-    - name: Publish MyGet
+    - name: Publish Nuget
       run: |
-        nuget setApiKey ${{ secrets.MYGET_TOKEN }} -Source https://www.myget.org/F/opentelemetry-contrib/api/v2/package
-        nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -Source https://www.myget.org/F/opentelemetry-contrib/api/v2/package
+        nuget setApiKey ${{ secrets.NUGET_TOKEN }} -Source https://api.nuget.org/v3/index.json
+        nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -Source https://api.nuget.org/v3/index.json
