--- a/src/OpenTelemetry.Contrib.Preview/OpenTelemetry.Contrib.Preview.csproj
+++ b/src/OpenTelemetry.Contrib.Preview/OpenTelemetry.Contrib.Preview.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(Configuration)' == 'Debug'">$(TargetFrameworks);net5.0</TargetFrameworks> <!-- Added just to get proper nullable analysis in IDE -->
-    <Description>OpenTelemetry .NET SDK Extensions</Description>
-    <MinVerTagPrefix>Extensions-</MinVerTagPrefix>
+    <Description>OpenTelemetry .NET SDK preview features and extensions</Description>
+    <MinVerTagPrefix>Preview-</MinVerTagPrefix>
     <Nullable>enable</Nullable>
     <EnableAnalysis>true</EnableAnalysis>
     <EnablePublicApi>true</EnablePublicApi>
