Added resource detectors for AWS services (#149)
* Added resource detectors for AWS services.

* Added logging

* Fixed space

* Added unit tests

* Update README.md

* Update README.md

* Update README.md

* Added more unit tests

* Update README

* Update README.md

* Update README.md

* Update TestResourceBuilderExtensions.cs

* Update TestAWSLambdaResourceDetector.cs

--- a/test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests.csproj
@@ -25,4 +25,23 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' != 'netcoreapp2.1' AND '$(TargetFramework)' != 'netcoreapp3.1'">
+    <Compile Remove="Resources\TestAWSECSResourceDetector.cs" />
+    <Compile Remove="Resources\TestAWSEKSResourceDetector.cs" />
+    <Compile Remove="Resources\TestAWSLambdaResourceDetector.cs" />
+    <Compile Remove="Resources\TestResourceBuilderExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\SampleMetadataFiles\environment.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\SampleMetadataFiles\testcgroup">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\SampleMetadataFiles\testekstoken">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
